--- a/mySite/oneXbet/templates/login.html
+++ b/mySite/oneXbet/templates/login.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-wertgh
-</body>
-</html>
+{% extends 'oneXbet/layouts/layout.html' %}
+{% block root %}
+    <form method="POST">
+        {% csrf_token %}  <!-- protection against cross-site request forgery -->
+        <!-- form variable containing the login form fields -->
+        {{ form.as_p }}
+        <!-- submit button for login form -->
+        <input type="submit" name="sumbit">
+    </form>
+{% endblock %}
