--- a/mySite/oneXbet/templates/index.html
+++ b/mySite/oneXbet/templates/index.html
@@ -15,7 +15,7 @@
                <div class="container">
                   <div class="carousel-caption relative">
 <!--                     <h1> <span>We Provide</span> Web Services</h1>-->
-                     <a href="#contact">Contact Us</a>
+                     <a href="#">Contact Us</a>
                   </div>
                </div>
             </div>
