--- a/mySite/oneXbet/templates/oneXbet/league.html
+++ b/mySite/oneXbet/templates/oneXbet/league.html
@@ -37,5 +37,32 @@
                 </form>
             </div>
         </nav>
+    <center>
+        <table class="table">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">No</th>
+      <th scope="col">team</th>
+      <th scope="col">win</th>
+      <th scope="col">draw</th>
+      <th scope="col">lose</th>
+      <th scope="col">total</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+      <td>@mdo</td>
+      <td>@mdo</td>
+    </tr>
+
+  </tbody>
+</table>
+    </center>
+
+
     </div>
 {% endblock %}
