--- a/mySite/oneXbet/templates/oneXbet/league.html
+++ b/mySite/oneXbet/templates/oneXbet/league.html
@@ -10,7 +10,7 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active" >
+                    <li class="nav-item active">
                         <a class="nav-link" href="#">table <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
@@ -22,7 +22,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                           Teams
+                            Teams
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#">Action</a>
@@ -37,31 +37,35 @@
                 </form>
             </div>
         </nav>
-    <center>
-        <table class="table">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">No</th>
-      <th scope="col">team</th>
-      <th scope="col">win</th>
-      <th scope="col">draw</th>
-      <th scope="col">lose</th>
-      <th scope="col">total</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-      <td>@mdo</td>
-      <td>@mdo</td>
-    </tr>
+        <center>
+            <table class="table">
+                <thead class="thead-dark">
+                <tr>
+                    <th scope="col">No</th>
+                    <th scope="col">team</th>
+                    <th scope="col">win</th>
+                    <th scope="col">draw</th>
+                    <th scope="col">lose</th>
+                    <th scope="col">total</th>
+                </tr>
+                </thead>
+                <tbody>
 
-  </tbody>
-</table>
-    </center>
+                {% for foo in league.club_set.all %}
+                    <tr>
+                        <th scope="row">{{ foo.pk }}</th>
+                        <td><img src="{{ foo.poster.url }}" width="50" height="50" alt="..."></td>
+                        <td>{{ foo.wins }}</td>
+                        <td>{{ foo.draws }}</td>
+                        <td>{{ foo.loses }}</td>
+                        <td>{{ foo.point }}</td>
+                    </tr>
+                {% endfor %}
+
+
+                </tbody>
+            </table>
+        </center>
 
 
     </div>
