--- a/mySite/oneXbet/templates/index.html
+++ b/mySite/oneXbet/templates/index.html
@@ -42,7 +42,7 @@
                <div class="container">
                   <div class="carousel-caption relative">
 <!--                     <h1> <span>We Provide</span> Web Services</h1>-->
-                     <a href="#contact">Contact Us</a>
+                     <a href="{% url 'contact' %}">Contact Us</a>
                   </div>
                </div>
             </div>
@@ -51,7 +51,7 @@
                <div class="container">
                   <div class="carousel-caption relative">
 <!--                     <h1> <span>We Provide</span> Web Services</h1>-->
-                     <a href="#contact">Contact Us</a>
+                     <a href="{% url 'contact' %}">Contact Us</a>
                   </div>
                </div>
             </div>
