--- a/mySite/oneXbet/templates/oneXbet/football/league.html
+++ b/mySite/oneXbet/templates/oneXbet/football/league.html
@@ -11,13 +11,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">table <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="{% url 'league' slug=league.url %}">table <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">news <span class="sr-only">(current)</span></a>
                     </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="#">games<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="{% url 'games' slug=league.url %}">games<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">game results <span class="sr-only">(current)</span></a>
