--- a/mySite/oneXbet/templates/oneXbet/football/game.html
+++ b/mySite/oneXbet/templates/oneXbet/football/game.html
@@ -4,7 +4,6 @@
         {#@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");#}
 
 
-
         :root {
             --color-text-primary: #1c2a38;
             --color-text-secondary: #8A8F98;
@@ -17,7 +16,6 @@
         }
 
         button,
-        input,
         select,
         textarea {
             font: inherit;
@@ -32,10 +30,8 @@
         }
 
 
-
-
         .match {
-            background-color: var(--color-bg-primary);
+
             display: flex;
             flex-direction: column;
             min-width: 600px;
@@ -51,8 +47,7 @@
         }
 
         .match-status {
-            background-color: var(--color-bg-alert);
-            color: var(--color-text-alert);
+
             padding: 8px 12px;
             border-radius: 6px;
             font-weight: 600;
@@ -65,7 +60,6 @@
             height: 60px;
 
         }
-
 
 
         .match-tournament {
@@ -84,7 +78,6 @@
         .btn-icon {
             border: 0;
             background-color: transparent;
-            color: var(--color-text-icon);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -140,7 +133,6 @@
             font-size: 14px;
 
 
-
         }
 
         .match-score {
@@ -153,8 +145,6 @@
             font-size: 48px;
             font-weight: 600;
             line-height: 1;
-
-
 
 
         }
@@ -179,24 +169,6 @@
             margin-top: 12px;
         }
 
-        .match-bet-options {
-            display: flex;
-            margin-top: 8px;
-            padding-bottom: 12px;
-        }
-
-        .match-bet-option {
-            margin-left: 4px;
-            margin-right: 4px;
-            border: 1px solid var(--color-text-icon);
-            background-color: #F9f9f9;
-            border-radius: 2px;
-            color: var(--color-text-secondary);
-            font-size: 14px;
-            font-weight: 600;
-            padding: 4px 8px;
-        }
-
         .match-bet-place {
             border: 0;
             background-color: var(--color-theme-primary);
@@ -214,66 +186,139 @@
             width: 80%;
         }
 
+        [type="radio"]:checked,
+        [type="radio"]:not(:checked) {
+            width: 0;
+            height: 0;
+            visibility: hidden;
+        }
+
+        .checkbox-tools:checked + label,
+        .checkbox-tools:not(:checked) + label {
+            position: relative;
+            display: inline-block;
+            padding: 20px;
+            width: 110px;
+            font-size: 10px;
+            line-height: 10px;
+            letter-spacing: 1px;
+            text-align: center;
+            border-radius: 4px;
+            overflow: hidden;
+            cursor: pointer;
+            text-transform: uppercase;
+            color: #ffffff;
+            -webkit-transition: all 300ms linear;
+            transition: all 300ms linear;
+        }
+
+        .checkbox-tools:not(:checked) + label {
+            background-color: #353746;
+            box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+        }
+
+        .checkbox-tools:checked + label {
+            background-color: transparent;
+            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+        }
+
+        .checkbox-tools:not(:checked) + label:hover {
+            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+        }
+
+        .checkbox-tools:checked + label::before,
+        .checkbox-tools:not(:checked) + label::before {
+            position: absolute;
+            content: "";
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 4px;
+            background-image: linear-gradient(298deg, #da2c4d, #f8ab37);
+            z-index: -1;
+        }
+
+        .checkbox-tools:checked + label .uil,
+        .checkbox-tools:not(:checked) + label .uil {
+            font-size: 16px;
+            line-height: 16px;
+            display: block;
+            padding-bottom: 10px;
+        }
+
 
     </style>
     <br>
     <br>
     <br>
-     <div class="container">
-    	<!-- code here -->
-    	<div class="match">
-    		<div class="match-header">
-    			<div class="match-status">Live</div>
-    			<div class="match-tournament"><img src="https://assets.codepen.io/285131/pl-logo.svg" />English Premier League</div>
-    			<div class="match-actions">
-    				<button class="btn-icon"><i class="material-icons-outlined">add alert</i></button>
-    			</div>
-    		</div>
-    		<div class="match-content">
-    			<div class="column">
-    				<div class="team team--home">
-    					<div class="team-logo">
-                                {#  https://assets.codepen.io/285131/whufc.svg#}
-    						<img src="{{ game.club1.poster.url }}" />
-    					</div>
-    					<h2 class="team-name">{{ game.club1.name }}</h2>
-    				</div>
-    			</div>
-    			<div class="column">
-    				<div class="match-details">
-    					<div class="match-date">
-    						12 Aug at <strong>19:00</strong>
-    					</div>
-    					<div class="match-score">
-    						<span class="match-score-number match-score-number--leading">-</span>
-    						<span class="match-score-divider">:</span>
-    						<span class="match-score-number">-</span>
-    					</div>
-    					<div class="match-time-lapsed">
-    						90
-    					</div>
-    					<div class="match-referee">
-    						Referee: <strong>Joseph Hicks</strong>
-    					</div>
-    					<div class="match-bet-options">
-    						<button class="match-bet-option">1.48</button>
-    						<button class="match-bet-option">4.98</button>
-    						<button class="match-bet-option">8.24</button>
-    					</div>
-    					<button class="match-bet-place">bet</button>
-    				</div>
-    			</div>
-    			<div class="column">
-    				<div class="team team--away">
-    					<div class="team-logo">
-                                {#                            https://assets.codepen.io/285131/chelsea.svg#}
-    						<img src="{{ game.club2.poster.url }}" />
-    					</div>
-    					<h2 class="team-name">{{ game.club2.name }}</h2>
-    				</div>
-    			</div>
-    		</div>
-    	</div>
+    <div class="container">
+        <!-- code here -->
+        <div class="match">
+            <div class="match-header">
+                <div class="match-status">Live</div>
+                <div class="match-tournament"><img src="https://assets.codepen.io/285131/pl-logo.svg" alt="..."/>{{ league.name }}</div>
+                <div class="match-actions" style="margin-bottom: 20px">
+                    <button class="btn-icon"><i class="material-icons-outlined" style="color: black;">add alert</i>
+                    </button>
+                </div>
+            </div>
+            <div class="match-content">
+                <div class="column">
+                    <div class="team team--home">
+                        <div class="team-logo">
+                            {#  https://assets.codepen.io/285131/whufc.svg#}
+                            <img src="{{ game.club1.poster.url }}" alt="..."/>
+                        </div>
+                        <h2 class="team-name">{{ game.club1.name }}</h2>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="match-details">
+                        <div class="match-date">
+                            12 Aug at <strong>19:00</strong>
+                        </div>
+                        <div class="match-score">
+                            <span class="match-score-number match-score-number--leading">-</span>
+                            <span class="match-score-divider">:</span>
+                            <span class="match-score-number">-</span>
+                        </div>
+                        <div class="match-time-lapsed">
+                            90
+                        </div>
+                        <div class="match-referee">
+                            Referee: <strong>Joseph Hicks</strong>
+                        </div>
+                        <form action="">
+                            <div class="row justify-content-center pb-5" style="margin-top: 50px">
+                                <div class="col-12 pb-5">
+                                    <input class="checkbox-tools" type="radio" name="tools" id="tool-1" value="{{ game.club1.pk }}" >
+                                    <label style="width: 30%;" class="for-checkbox-tools" for="tool-1">
+                                        win 2x
+                                    </label><input class="checkbox-tools" type="radio" name="tools" id="tool-2" value="0">
+                                    <label style="width: 30%; " class="for-checkbox-tools" for="tool-2" >
+                                        draw 1,5x
+                                    </label><input class="checkbox-tools" type="radio" name="tools" value="{{ game.club2.pk }}" id="tool-3">
+                                    <label style="width: 30%;padding: 20px" class="for-checkbox-tools" for="tool-3">
+                                        win 2x
+                                    </label>
+                                </div>
+                                <button class="match-bet-place" >bet</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="team team--away">
+                        <div class="team-logo">
+                            {#                            https://assets.codepen.io/285131/chelsea.svg#}
+                            <img src="{{ game.club2.poster.url }}" alt=".."/>
+                        </div>
+                        <h2 class="team-name">{{ game.club2.name }}</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <br>
     <br>
