--- a/mySite/oneXbet/templates/oneXbet/profile.html
+++ b/mySite/oneXbet/templates/oneXbet/profile.html
@@ -148,11 +148,14 @@
                             <div class="col-sm-4 bg-c-lite-green user-profile">
                                 <div class="card-block text-center text-white">
                                     <div class="m-b-25">
-                                        <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius"
+{#                                        <img src="{{ request.user.avatar.url }}" class="img-radius"#}
                                              alt="User-Profile-Image">
                                     </div>
-                                    <h6 class="f-w-600">Hembo Tingor</h6>
-                                    <p>Web Designer</p>
+                                    <h6 class="f-w-600">{{ request.user.username }}</h6>
+                                    <p> {{ request.user.first_name }} {{ request.user.last_name }}</p>
+                                    <p> {{ request.user.location }}</p>
+                                    <p> {{ request.user.socialAccount }}</p>
+                                    <p> {{ request.user.money }} tg</p>
                                     <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
                                 </div>
                             </div>
@@ -162,37 +165,56 @@
                                     <div class="row">
                                         <div class="col-sm-6">
                                             <p class="m-b-10 f-w-600">Email</p>
-                                            <h6 class="text-muted f-w-400">rntng@gmail.com</h6>
+                                            <h6 class="text-muted f-w-400">{{ request.user.email }}</h6>
                                         </div>
                                         <div class="col-sm-6">
                                             <p class="m-b-10 f-w-600">Phone</p>
-                                            <h6 class="text-muted f-w-400">98979989898</h6>
+                                            <h6 class="text-muted f-w-400">
+                                                {% if request.user.phone %}
+                                                    {{ request.user.phone }}
+                                                {% else %}
+                                                    no phone number
+                                                {% endif %} </h6>
                                         </div>
                                     </div>
-                                    <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">Projects</h6>
+                                    <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">Bio</h6>
                                     <div class="row">
-                                        <div class="col-sm-6">
-                                            <p class="m-b-10 f-w-600">Recent</p>
-                                            <h6 class="text-muted f-w-400">Sam Disuja</h6>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <p class="m-b-10 f-w-600">Most Viewed</p>
-                                            <h6 class="text-muted f-w-400">Dinoter husainm</h6>
-                                        </div>
+                                        {{ request.user.info }}
                                     </div>
                                     <ul class="social-link list-unstyled m-t-40 m-b-10">
-                                        <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title=""
-                                               data-original-title="facebook" data-abc="true"><i
-                                                class="mdi mdi-facebook feather icon-facebook facebook"
-                                                aria-hidden="true"></i></a></li>
-                                        <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title=""
-                                               data-original-title="twitter" data-abc="true"><i
-                                                class="mdi mdi-twitter feather icon-twitter twitter"
-                                                aria-hidden="true"></i></a></li>
-                                        <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title=""
-                                               data-original-title="instagram" data-abc="true"><i
-                                                class="mdi mdi-instagram feather icon-instagram instagram"
-                                                aria-hidden="true"></i></a></li>
+                                        <button type="button" class="btn btn-primary" data-toggle="modal"
+                                                data-target="#exampleModal"> edit profile</button>
+                                        <!-- Modal -->
+                                        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+                                             aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog" role="document">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title" id="exampleModalLabel">Update Profile</h5>
+                                                        <button type="button" class="close" data-dismiss="modal"
+                                                                aria-label="Close">
+                                                            <span aria-hidden="true">&times;</span>
+                                                        </button>
+                                                    </div>
+                                                     <form method="post">
+                                                    <div class="modal-body">
+
+                                                            {% csrf_token %}
+                                                            {{ form.as_p }}
+
+
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary"
+                                                                data-dismiss="modal">Close
+                                                        </button>
+                                                        <button type="submit" class="btn btn-primary">Save changes
+                                                        </button>
+                                                    </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </ul>
                                 </div>
                             </div>
