--- a/mySite/oneXbet/templates/oneXbet/layouts/layout.html
+++ b/mySite/oneXbet/templates/oneXbet/layouts/layout.html
@@ -8,38 +8,22 @@
     <!-- mobile metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <!-- site metas -->
     <title>one_x_bet</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!-- bootstrap css -->
+
     <link rel="stylesheet" href="{% static 'oneXbet/css/bootstrap.min.css' %} ">
-    <!-- style css -->
     <link rel="stylesheet" href="{% static 'oneXbet/css/style.css' %}">
-    <!-- Responsive-->
-    <link rel="stylesheet" href="{% static 'oneXbet/css/responsive.css' %}">
     <link rel="stylesheet" href="{% static 'oneXbet/cardLeagues/style.css' %}">
-    <!-- fevicon -->
-    <link rel="icon" href="{% static 'oneXbet/images/fevicon.png' %}" type="image/gif"/>
-    <!-- Scrollbar Custom CSS -->
-    <link rel="stylesheet" href="{% static 'oneXbet/css/jquery.mCustomScrollbar.min.css' %}">
-    <!-- Tweaks for older IEs-->
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
-          media="screen">
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+    <link rel="stylesheet" href="{% static 'oneXbet/css/profile.css' %}">
+
+
 </head>
 <!-- body -->
 <body class="main-layout">
 <!-- loader  -->
 <div class="loader_bg">
-    <div class="loader"><img src="{% static 'oneXbet/images/loading.gif' %}" alt="#"/></div>
+    <div class="loader">loading...</div>
 </div>
-<!-- end loader -->
-<!-- header -->
+
 <header>
     <!-- header inner -->
     <div class="header">
@@ -76,7 +60,7 @@
                                         <a class="nav-link" href="#">Basketball</a>
                                     </li>
                                 </ul>{% if  user.is_authenticated %}
-{#                                <div class="sign_btn"><a href="{% url 'profile' %}">PROFILE</a></div>#}
+                                <div class="sign_btn"><a href="{% url 'profile' %}">PROFILE</a></div>
                                 <div class="sign_btn"><a href="{% url 'logout' %}">LOGOUT</a></div>
                             {% else %}
                                 <div class="sign_btn"><a href="{% url 'register' %}">REGISTER</a></div>
@@ -142,17 +126,11 @@
         </div>
     </div>
 </footer>
-<!-- end footer -->
-<!-- Javascript files-->
+
 <script src="{% static 'oneXbet/js/jquery.min.js' %}"></script>
-<script src="{% static 'oneXbet/js/popper.min.js' %}"></script>
 <script src="{% static 'oneXbet/js/bootstrap.bundle.min.js' %}"></script>
 <script src="{% static 'oneXbet/js/jquery-3.0.0.min.js' %}"></script>
-
-<!-- sidebar -->
-<script src="{% static 'oneXbet/js/jquery.mCustomScrollbar.concat.min.js' %}"></script>
 <script src="{% static 'oneXbet/js/custom.js' %}"></script>
-<script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
 </body>
 </html>
 
