--- a/mySite/oneXbet/templates/register.html
+++ b/mySite/oneXbet/templates/register.html
@@ -1,13 +1,6 @@
 {% extends 'oneXbet/layouts/layout.html' %}
 {% block root %}
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <style>
-        body {
-            background: #333;
-        }
-
         #login {
             -webkit-perspective: 1000px;
             -moz-perspective: 1000px;
@@ -16,81 +9,26 @@
             margin-left: 30%;
         }
 
-        .login {
-            font-family: 'Josefin Sans', sans-serif;
-            -webkit-transition: .3s;
-            -moz-transition: .3s;
-            transition: .3s;
-            -webkit-transform: rotateY(40deg);
-            -moz-transform: rotateY(40deg);
-            transform: rotateY(40deg);
-        }
-
-        .login:hover {
-            -webkit-transform: rotate(0);
-            -moz-transform: rotate(0);
-            transform: rotate(0);
-        }
-
-        .login article {
-
-        }
-
-        .login .form-group {
-            margin-bottom: 17px;
-        }
-
-        .login .form-control,
-        .login .btn {
-            border-radius: 0;
-        }
-
-        .login .btn {
-            text-transform: uppercase;
-            letter-spacing: 3px;
-        }
-
-        .input-group-addon {
-            border-radius: 0;
-            color: #fff;
-            background: #f3aa0c;
-            border: #f3aa0c;
-        }
-
-        .forgot {
-            font-size: 16px;
-        }
-
-        .forgot a {
-            color: #333;
-        }
-
-        .forgot a:hover {
-            color: #5cb85c;
-        }
-
-        #inner-wrapper, #contact-us .contact-form, #contact-us .our-address {
+        #inner-wrapper  {
             color: #1d1d1d;
             font-size: 19px;
             line-height: 1.7em;
             font-weight: 300;
             padding: 50px;
             background: #fff;
-            box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+            box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.1);
             margin-bottom: 100px;
         }
-
         .input-group-addon {
-            border-radius: 0;
-            border-top-right-radius: 0px;
-            border-bottom-right-radius: 0px;
+            width: 100px;
+            border-radius: 2px;
             color: #fff;
-            background: #f3aa0c;
-            border: #f3aa0c;
+            padding: 5px;
+            background: #083586;
+            border: #1d1d21;
             border-right-color: rgb(243, 170, 12);
-            border-right-style: none;
-            border-right-width: medium;
-        }</style>
+        }
+    </style>
     <div class="col-md-4 col-md-offset-4" id="login">
         <section id="inner-wrapper" class="login">
             <article>
