--- a/mySite/oneXbet/templates/index.html
+++ b/mySite/oneXbet/templates/index.html
@@ -14,7 +14,6 @@
                <img class="first-slide" src="https://static.legalcdn.org/42/23/5e6254064b73d_1583502342.png" alt="First slide">
                <div class="container">
                   <div class="carousel-caption relative">
-<!--                     <h1> <span>We Provide</span> Web Services</h1>-->
                      <a href="#">Contact Us</a>
                   </div>
                </div>
@@ -24,7 +23,7 @@
                <div class="container">
                   <div class="carousel-caption relative">
 <!--                     <h1> <span>We Provide</span> Web Services</h1>-->
-                     <a href="#contact">Contact Us</a>
+                     <a href="#">Contact Us</a>
                   </div>
                </div>
             </div>
@@ -33,7 +32,7 @@
                <div class="container">
                   <div class="carousel-caption relative">
 <!--                     <h1> <span>We Provide</span> Web Services</h1>-->
-                     <a href="#contact">Contact Us</a>
+                     <a href="#">Contact Us</a>
                   </div>
                </div>
             </div>
@@ -65,8 +64,7 @@
          <span class="sr-only">Next</span>
          </a>
       </div>
-      <!-- end banner -->
-      <!-- about -->
+
       <div id="about"  class="about">
          <div class="container">
             <div class="row d_flex">
@@ -86,6 +84,4 @@
             </div>
          </div>
       </div>
-
-      <!--  footer -->
 {% endblock %}
