--- a/mySite/oneXbet/templates/oneXbet/layouts/layout.html
+++ b/mySite/oneXbet/templates/oneXbet/layouts/layout.html
@@ -65,16 +65,12 @@
 
 {% if messages %}
     {% for message in messages %}
-        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
-            {{ message }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+       <center>
+        <div style="width: 70%; display: flex;" class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+              <div>{{ message }}   <button type="button" class="close" data-dismiss="alert" aria-label="Close">x</button></div>
         </div>
+       </center>
     {% endfor %}
-
-
-
 {% endif %}
 {% block root %}
 
