--- a/mySite/oneXbet/templates/login.html
+++ b/mySite/oneXbet/templates/login.html
@@ -1,10 +1,8 @@
 {% extends 'oneXbet/layouts/layout.html' %}
 {% block root %}
     <form method="POST">
-        {% csrf_token %}  <!-- protection against cross-site request forgery -->
-        <!-- form variable containing the login form fields -->
+        {% csrf_token %}
         {{ form.as_p }}
-        <!-- submit button for login form -->
         <input type="submit" name="sumbit">
     </form>
 {% endblock %}
