--- a/mySite/oneXbet/templates/oneXbet/layouts/layout.html
+++ b/mySite/oneXbet/templates/oneXbet/layouts/layout.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'oneXbet/cardLeagues/style.css' %}">
     <link rel="stylesheet" href="{% static 'oneXbet/cardLeagues/game.css' %}">
     <link rel="stylesheet" href="{% static 'oneXbet/css/profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/register.css' %}">
 </head>
 <body class="main-layout">
 
